added search for a city card

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <header id="header" class="jumbotron">
         <h1 class="display-3">Weather Dashboard</h1>
       </header>
+      <main class="flex-row justify-space-between">
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <h3 class="card-header">Search for a City</h3>
+                <form id="city-form" class="card-body">
+                    <label class="form-label" for="cityname">City Name</label>
+                    <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
+                    <button type="submit" class="btn">Search</button>
+                  </form>
+                </div>
+      </main>
     <script src="./assets/script.js"></script>
   </body>
 </html>
