updated html and css to add a hide class so that the ul that will house the cities searched will start off as hidden

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <button type="submit" id="citysearchbtn" class="btn">Search</button>
                     <div class="col-12 col-md-4">
                     </div>
+                    <div class="hide">
                     <ul id="citysearch" class="list-group"></ul>
-
+                </div>
                 </form>
             </div>
     </main>
