commiting changes before i get with ask bcs or office hours

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
             <div class="card">
                 <h3 class="card-header">Search for a City</h3>
                 <form id="city-form" class="card-body">
-                    <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" placeholder="Enter city to view weather" />
+                    <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input"
+                        placeholder="Enter city to view weather" />
                     <button type="submit" id="citysearchbtn" class="btn">Search</button>
                     <div class="col-12 col-md-4">
                     </div>
                     <div class="hide">
-                    <ul id="citysearch" class="list-group"></ul>
-                </div>
+                        <ul id="citysearch" class="list-group"></ul>
+                    </div>
                 </form>
             </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 
