fixed a bug where list of cities was saving to local storage but not creating a li inside ul. ta helped me with this

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                     <button type="submit" id="citysearchbtn" class="btn">Search</button>
                     <div class="col-12 col-md-4">
                     </div>
-                    <div class="hide">
+                    <div id="previous-cities" class="hide">
                         <ul id="citysearch" class="list-group"></ul>
+                        <!-- need help dynamically creating <li> here -->
                     </div>
                 </form>
             </div>
