--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
                     <div id="previous-cities" class="hide">
                         <ul id="citysearch" class="list-group"></ul>
                         <!-- need help dynamically creating <li> here -->
+                            <!-- this is working now  -->
                     </div>
                 </form>
+            </div>
+            
+            <div class="card">
+                <h3 class="card-header">City: Current Weather </h3>
+            </div>
+            <div class="card">
+                <h3 class="card-header">City: 5 Day Weather Forecast </h3>
             </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
