current weather/city is now dynamically reporting

--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
                     </div>
                 </form>
             </div>
-
-            <div class="card">
-                <h3 id="cityname" class="card-header">City: Current Weather </h3>
-                <p id="1a"></p>
+            <div>
+            <div class="current-card">
+                <h3 id="citylocation" class="card-header">City: Current Weather <img id="weather-icon"> </h3>
+                <p id="current-temp"></p>
+                <p id="current-wind"></p>
+                <p id="current-hum"></p>
             </div>
-            <div class="card">
+            <div class="five-day-card">
                 <h3 class="card-header">City: 5 Day Weather Forecast </h3>
             </div>
+        </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="./assets/script.js"></script>
