--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div>
             <div class="current-card">
-                <h3 id="citylocation" class="card-header">City: Current Weather <img id="weather-icon"> </h3>
+                <h3 id="citylocation" class="card-header">[City, Time, Current Weather] <img id="weather-icon"> </h3>
                 <p id="current-temp"></p>
                 <p id="current-wind"></p>
                 <p id="current-hum"></p>
