now have next 5 days dynmaically being added once user inputs city search

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     </div>
                 </form>
             </div>
-            <div>
             <div class="current-card">
                 <h3 id="citylocation" class="card-header">[City, Time, Current Weather] <img id="weather-icon"> </h3>
                 <p id="current-temp"></p>
@@ -43,9 +42,38 @@
                 <p id="current-hum"></p>
             </div>
             <div class="five-day-card">
-                <h3 class="card-header">City: 5 Day Weather Forecast </h3>
+                <h3 class="card-header">5 Day Weather Forecast</h3>
+                <div class="current-card">
+                    <h3 id="day-1" class="card-header">Day 1 <img id="weather-icon"> </h3>
+                    <!-- <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-hum"></p> -->
+                </div>
+                <div class="current-card">
+                    <h3 id="day-2" class="card-header">Day 2 <img id="weather-icon"> </h3>
+                    <!-- <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-hum"></p> -->
+                </div>
+                <div class="current-card">
+                    <h3 id="day-3" class="card-header">Day 3 <img id="weather-icon"> </h3>
+                    <!-- <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-hum"></p> -->
+                </div>
+                <div class="current-card">
+                    <h3 id="day-4" class="card-header">Day 4 <img id="weather-icon"> </h3>
+                    <!-- <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-hum"></p> -->
+                </div>
+                <div class="current-card">
+                    <h3 id="day-5" class="card-header">Day 5 <img id="weather-icon"> </h3>
+                    <!-- <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-hum"></p> -->
+                </div>
             </div>
-        </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="./assets/script.js"></script>
