working on getting weather icons to add- going to askbcs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </form>
             </div>
             <div class="current-card">
-                <h3 id="citylocation" class="card-header">[City, Time, Current Weather] <img id="weather-icon"> </h3>
+                <h3 id="citylocation" class="card-header">[City, Time, Current Weather] <img id="weather-icon" src="" alt="Weather Icon"> </h3>
                 <p id="current-temp"></p>
                 <p id="current-wind"></p>
                 <p id="current-hum"></p>
