saving work have some icons displaying but still has a bug

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </form>
             </div>
             <div class="current-card">
-                <h3 id="citylocation" class="card-header">[City, Time, Current Weather] <img id="weather-icon" src="" alt="Weather Icon"> </h3>
+                <h3 id="citylocation" class="card-header">[City, Time, Current Weather] </h3>
+                <img id="weather-icon" class="icons" src="" alt="Weather Icon"> 
                 <p id="current-temp"></p>
                 <p id="current-wind"></p>
                 <p id="current-hum"></p>
@@ -44,7 +45,8 @@
             <div class="five-day-card">
                 <h3 class="card-header">5 Day Weather Forecast</h3>
                 <div class="current-card">
-                    <h3 id="day-1" class="card-header">Day 1 <img id="weather-icon"> </h3>
+                    <h3 id="day-1" class="card-header">Day 1</h3>
+                    <img id="weather-icon" class="icons" src="" alt="Weather Icon"> 
                     <p id="day1-temp"></p>
                     <p id="day1-wind"></p>
                     <p id="day1-hum"></p>
