fixed a bug where weather icons were all the same, figured out it was because they were pulling from the same url and data source

--- a/index.html
+++ b/index.html
@@ -46,31 +46,35 @@
                 <h3 class="card-header">5 Day Weather Forecast</h3>
                 <div class="current-card">
                     <h3 id="day-1" class="card-header">Day 1</h3>
-                    <img id="weather-icon" class="icons" src="" alt="Weather Icon"> 
+                    <img id="weather-icon1" class="icons" src="" alt="Weather Icon"> 
                     <p id="day1-temp"></p>
                     <p id="day1-wind"></p>
                     <p id="day1-hum"></p>
                 </div>
                 <div class="current-card">
-                    <h3 id="day-2" class="card-header">Day 2 <img id="weather-icon"> </h3>
+                    <h3 id="day-2" class="card-header">Day 2</h3>
+                    <img id="weather-icon2" class="icons" src="" alt="Weather Icon"> 
                     <p id="day2-temp"></p>
                     <p id="day2-wind"></p>
                     <p id="day2-hum"></p>
                 </div>
                 <div class="current-card">
-                    <h3 id="day-3" class="card-header">Day 3 <img id="weather-icon"> </h3>
+                    <h3 id="day-3" class="card-header">Day 3</h3>
+                    <img id="weather-icon3" class="icons" src="" alt="Weather Icon"> 
                     <p id="day3-temp"></p>
                     <p id="day3-wind"></p>
                     <p id="day3-hum"></p>
                 </div>
                 <div class="current-card">
-                    <h3 id="day-4" class="card-header">Day 4 <img id="weather-icon"> </h3>
+                    <h3 id="day-4" class="card-header">Day 4</h3>
+                    <img id="weather-icon4" class="icons" src="" alt="Weather Icon"> 
                     <p id="day4-temp"></p>
                     <p id="day4-wind"></p>
                     <p id="day4-hum"></p>
                 </div>
                 <div class="current-card">
-                    <h3 id="day-5" class="card-header">Day 5 <img id="weather-icon"> </h3>
+                    <h3 id="day-5" class="card-header">Day 5</h3>
+                    <img id="weather-icon5" class="icons" src="" alt="Weather Icon"> 
                     <p id="day5-temp"></p>
                     <p id="day5-wind"></p>
                     <p id="day5-hum"></p>
